# OutdoorEnvironmentRendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: container.fbx  garage.fbx  wood_workbench.fbx  workbench.fbx
assets/shaders/: example_material_shader.glsl  framebuffer.glsl  grass.glsl  particle.glsl  particle_cs.glsl  particle_ms.glsl  raw_model.glsl  raw_model_flat_color.glsl  skybox.glsl  textured_quad.glsl  variance_shadow_map.glsl
include/: assets.h  base_model.h  camera.h  clock.h  components.h  entity.h  framebuffer.h  gl_helpers.h  input.h  local_imgui_config.h  material.h  model.h  particle.h  particlesystem.h  renderer.h  scene.h  shader.h  texture.h  window.h
src/: Shader.cpp  assets.cpp  camera.cpp  entity.cpp  framebuffer.cpp  gl_helpers.cpp  main.cpp  material.cpp  model.cpp  particlesystem.cpp  scene.cpp  texture.cpp  window.cpp
